<resources>
    <string name="app_name">ZooApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbSave">Salvar</string>
    <string name="lbDelete">Remover</string>
    <string name="lbCodigo">Código</string>
    <string name="lbDesc">Descrição</string>
    <string name="lbCancel">Cancelar</string>
    <string name="lbUpdate">Alterar</string>
    <string name="lbAnimais">Animais Cadastrados</string>
    <string name="lbCategoria">Categoria</string>
    <string name="lbVacina">Vacina</string>


    <string name="title_activity_categoria">CategoriaActivity</string>
    <string name="title_activity_animal">AnimalActivity</string>
</resources>
