<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CategoriaActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:showIn="@layout/activity_categoria">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbCodigo"
        android:enabled="false"
        android:id="@+id/etCode"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lbDesc"
        android:id="@+id/etDesc"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbSave"
            android:drawableLeft="@drawable/ic_menu_send"
            android:layout_weight="1"
            android:id="@+id/btSave"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_menu_send"
            android:layout_weight="1"
            android:text="@string/lbCancel"
            android:id="@+id/btCancel"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lvCategories"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/colorPrimary"
        />

</LinearLayout>